# moon-suck-tale

./: CMakeLists.txt  README
inc/: audio.h  bitmap.h  error.h  events.h  fs.h  pch.h  sys.h
inc/egdi/: egdi.h
src/: audio.c  bitmap.c  error.c  events.c  fs.c  iid.c  main.c  updator.c
src/egdi/: init.c  rdrctx.c
